--- a/sounds/app/src/main/res/layout/activity_home.xml
+++ b/sounds/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/fragment5"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="410dp"
+        android:layout_width="wrap_content"
         android:layout_height="605dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
