--- a/sounds/app/src/main/res/layout/login_activity.xml
+++ b/sounds/app/src/main/res/layout/login_activity.xml
@@ -12,33 +12,12 @@
         android:id="@+id/EmailField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="180dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Banner" />
-
-    <TextView
-        android:id="@+id/Banner"
-        android:layout_width="478dp"
-        android:layout_height="69dp"
-        android:height="15sp"
-
-        android:background="#B4FF97DB"
-        android:duplicateParentState="false"
-        android:editable="false"
-        android:fontFamily="monospace"
-        android:lineSpacingExtra="8sp"
-        android:text="LOGIN"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="36sp"
-        android:transformPivotX="10sp"
-        android:typeface="monospace"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,9 +30,10 @@
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailField"
-        app:layout_constraintVertical_bias="0.213" />
+        app:layout_constraintVertical_bias="0.147" />
 
     <Button
         android:id="@+id/LoginButton"
