--- a/sounds/app/src/main/res/values/styles.xml
+++ b/sounds/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FF69B4</item>
-        <item name="colorPrimaryDark">#FF1493</item>
-        <item name="colorAccent">#FFB6C1</item>
+        <item name="colorPrimary">#E1FF8DD8</item>
+        <item name="colorPrimaryDark">#E1FF8DD8</item>
+        <item name="colorAccent">#E1FF8DD8</item>
     </style>
 
 </resources>
