--- a/sounds/app/src/main/res/layout/activity_chatbot.xml
+++ b/sounds/app/src/main/res/layout/activity_chatbot.xml
@@ -7,15 +7,29 @@
     android:fitsSystemWindows="true"
     tools:context=".ChatbotActivity">
 
-    <RelativeLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#FF1493"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context="com.example.vmac.WatBot.MainActivity"
+        app:menu="@menu/bottom_menu_chatbot">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView"
+        app:layout_constraintVertical_bias="0.971"
+        tools:context="com.example.a20qprojet.ChatbotActivity"
         tools:showIn="@layout/activity_chatbot">
 
         <androidx.recyclerview.widget.RecyclerView
