--- a/sounds/app/src/main/res/layout/chat_item_self.xml
+++ b/sounds/app/src/main/res/layout/chat_item_self.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="10dp"
         android:fontFamily="sans-serif" />-->
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
