--- a/sounds/app/src/main/res/layout/fragment_profile.xml
+++ b/sounds/app/src/main/res/layout/fragment_profile.xml
@@ -11,46 +11,54 @@
         android:id="@+id/textView4"
         android:layout_width="167dp"
         android:layout_height="31dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="24dp"
         android:text="Username"
         android:textAlignment="center"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="227dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="167dp"
         android:layout_height="24dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="20dp"
         android:text="Type d'utilisateur"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="197dp"
         android:layout_height="196dp"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_marginStart="104dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@mipmap/default_user" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine"
         android:layout_width="368dp"
         android:layout_height="297dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="313dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Sauvegarder le profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="656dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
